fix(03-01): replace 100vw with 100% to eliminate horizontal overflow
- Replaced 10 occurrences of width: 100vw with width: 100%
- Affected: footer-left, footer-right, cta-footer, cards section responsive rules
- 100vw includes scrollbar width causing horizontal scrollbar
- 100% respects parent container width

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -740,7 +740,7 @@ header .logo {
 
   @media (max-width: 768px) {
     .footer-left {
-      width: 100vw;
+      width: 100%;
       order: 2;
       padding-left: 15px;
       margin: 0;
@@ -798,7 +798,7 @@ header .logo {
 
     .footer-right {
       order: 1;
-      width: 100vw;
+      width: 100%;
     }
 
     .community-newsletter {
@@ -819,7 +819,7 @@ header .logo {
 
     .cta-footer {
       height: 30vh;
-      width: 100vw;
+      width: 100%;
       padding-left: 15px;
       align-items: baseline;
       justify-content: baseline;
@@ -1407,7 +1407,7 @@ section,
 
 @media (min-width: 1800px) {
   .cards {
-    width: 100vw !important;
+    width: 100% !important;
   }
 
   .cards .container-fluid {
@@ -1441,7 +1441,7 @@ section,
   /* Enable snapping */
   scrollbar-width: none;
   /* For Firefox */
-  width: 100vw;
+  width: 100%;
   padding-right: 150px;
 }
 
@@ -1559,7 +1559,7 @@ section,
   .cards .container {
     padding: 20px 15px;
     margin: 0;
-    width: 100vw !important;
+    width: 100% !important;
   }
 
   .cards .cards-title h3 {
@@ -1581,7 +1581,7 @@ section,
 
   .cards .row {
     gap: 10px;
-    width: 100vw !important;
+    width: 100% !important;
   }
 }
 
@@ -2179,7 +2179,7 @@ section,
 
 @media (min-width: 1800px) {
   .cards-portfolio {
-    width: 100vw !important;
+    width: 100% !important;
     .col-lg-4 {
       width: 23.333333%;
       margin-right: 100px;
@@ -2496,7 +2496,7 @@ section,
   .contact {
     .container-fluid {
       margin-left: 0;
-      width: 100vw;
+      width: 100%;
       border-radius: 0px;
       margin-bottom: 0px;
     }
@@ -2536,7 +2536,7 @@ section,
 
 @media (max-width: 768px) {
   .maps-contact {
-    width: 100vw;
+    width: 100%;
     border-radius: 0px;
     padding-left: 0px;
     margin-top: 0;
